@@ -6,26 +6,27 @@
     <parent>
         <groupId>com.lince.observer</groupId>
         <artifactId>lince-plus-root</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>lince-desktop</artifactId>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!--        <start-class>com.lince.observer.LinceApiApplication</start-class>-->
-        <!--        <tomcat.version>8.0.24</tomcat.version>-->
+        <start-class>com.lince.observer.desktop.LinceAppFx</start-class>
+<!--        <javafx.modulepath>${project.build.directory}/javafx-modules</javafx.modulepath>-->
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-<!--        Jakarta is an option but check compatibilities-->
-<!--        https://docs.spring.io/spring-framework/reference/core/beans/standard-annotations.html#beans-standard-annotations-limitations-->
-<!--        <dependency>-->
-<!--            <groupId>jakarta.inject</groupId>-->
-<!--            <artifactId>jakarta.inject-api</artifactId>-->
-<!--        </dependency>-->
+        <!--        Jakarta is an option but check compatibilities-->
+        <!--        https://docs.spring.io/spring-framework/reference/core/beans/standard-annotations.html#beans-standard-annotations-limitations-->
+        <!--        <dependency>-->
+        <!--            <groupId>jakarta.inject</groupId>-->
+        <!--            <artifactId>jakarta.inject-api</artifactId>-->
+        <!--        </dependency>-->
         <!--        Internal dependencies-->
         <dependency>
             <groupId>com.lince.observer</groupId>
@@ -129,18 +130,35 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.8.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springdoc</groupId>-->
-<!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springdoc</groupId>-->
+        <!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <finalName>lince-desktop</finalName>
+        <outputDirectory>${project.build.directory}/classes</outputDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${start-class}</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <Add-Exports>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</Add-Exports>
+                            <Add-Opens>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</Add-Opens>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -154,6 +172,7 @@
                 </executions>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
+<!--                    <mainClass>com.lince.observer.desktop.LinceApp</mainClass>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -161,16 +180,36 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
-<!--                    <fork>true</fork>-->
+                    <!--                    <fork>true</fork>-->
                     <mainClass>${start-class}</mainClass>
+<!--                    <mainClass>com.lince.observer.desktop.LinceAppFx</mainClass>-->
                     <layout>ZIP</layout>
+<!--                    ,javafx.base,javafx.swing,javafx.graphics-->
+                    <!--                        &#45;&#45;module-path ${javafx.modulepath}-->
+                    <jvmArguments>
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED
+                        --add-opens=javafx.base/com.sun.javafx.collections=javafx.web
+                        --add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED
+                        --add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED
+                        --add-opens=javafx.graphics/javafx.scene.input=ALL-UNNAMED
+                        --add-opens=javafx.web/javafx.scene.web=ALL-UNNAMED
+                        --add-opens=javafx.web/com.sun.webkit=ALL-UNNAMED
+                        --add-opens=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-modules=ALL-MODULE-PATH
+                        --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
+                    </jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <!--                            <goal>run</goal>-->
                             <goal>repackage</goal>
-                            <goal>start</goal>
+                            <!-- This starts up the program from mvn:    <goal>start</goal>-->
                         </goals>
                     </execution>
                 </executions>
@@ -185,7 +224,7 @@
                         <configuration>
                             <target>
                                 <copy file="target/lince-desktop.jar"
-                                      tofile="../lince-dist/lince-desktop.jar"/>
+                                      tofile="../installer/install4j/lince-desktop.jar"/>
                                 <!--                                <copy file="target/${project.artifactId}-${project.version}.jar"-->
                                 <!--                                      tofile="../${outputFolder}/${project.artifactId}.${outputExtension}"/>-->
                             </target>
@@ -193,6 +232,55 @@
                         <goals>
                             <goal>run</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Maven Shade Plugin for creating an uber jar -->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-shade-plugin</artifactId>-->
+            <!--                <version>3.5.1</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <phase>package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>shade</goal>-->
+            <!--                        </goals>-->
+            <!--&lt;!&ndash;                        <configuration>&ndash;&gt;-->
+            <!--&lt;!&ndash;                            <transformers>&ndash;&gt;-->
+            <!--&lt;!&ndash;                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">&ndash;&gt;-->
+            <!--&lt;!&ndash;                                    <mainClass>com.example.YourMainClass</mainClass>&ndash;&gt;-->
+            <!--&lt;!&ndash;                                </transformer>&ndash;&gt;-->
+            <!--&lt;!&ndash;                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>&ndash;&gt;-->
+            <!--&lt;!&ndash;                            </transformers>&ndash;&gt;-->
+            <!--&lt;!&ndash;                        </configuration>&ndash;&gt;-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
+            <!-- Install4j Maven Plugin | https://www.ej-technologies.com/resources/install4j/help/doc/cli/maven.html -->
+            <plugin>
+                <groupId>com.install4j</groupId>
+                <artifactId>install4j-maven</artifactId>
+                <version>${install4j.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile-installers</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <projectFile>${project.basedir}/../installer/install4j/lince-plus-installer-v3.install4j
+                            </projectFile>
+                            <release>${project.version}</release>
+                            <destination>${project.basedir}/../installer</destination>
+                            <variables>
+                                <property>
+                                    <name>version</name>
+                                    <value>${project.version}</value>
+                                </property>
+                            </variables>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
